human-intervention-logs/com.google.protobuf:protobuf-javalite:3.25.3/gradle-test/gradle-test-2026-05-04T20-32-13-764596Z.log
Starting a Gradle Daemon, 9 busy and 5 incompatible and 231 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.google.protobuf:protobuf-javalite:3.25.3
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2711-8b107850/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 9 busy and 7 incompatible and 231 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :checkTestTimeoutAnnotations

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2711-8b107850/tests/src/com.google.protobuf/protobuf-javalite/3.25.3/src/test/java/com_google_protobuf/protobuf_javalite/GeneratedMessageLiteInnerSerializedFormTest.java:124: error: type argument Empty is not within bounds of type-variable MessageType
abstract class SerializedFormReachability extends GeneratedMessageLite<Empty, Empty.Builder> {
                                                                       ^
  where MessageType,BuilderType are type-variables:
    MessageType extends GeneratedMessageLite<MessageType,BuilderType> declared in class GeneratedMessageLite
    BuilderType extends Builder<MessageType,BuilderType> declared in class GeneratedMessageLite
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2711-8b107850/tests/src/com.google.protobuf/protobuf-javalite/3.25.3/src/test/java/com_google_protobuf/protobuf_javalite/GeneratedMessageLiteInnerSerializedFormTest.java:124: error: type argument Empty is not within bounds of type-variable MessageType
  abstract class SerializedFormReachability extends GeneratedMessageLite<Empty, Empty.Builder> {
                                                                         ^
    where MessageType,BuilderType are type-variables:

      MessageType extends GeneratedMessageLite<MessageType,BuilderType> declared in class GeneratedMessageLite
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2711-8b107850/tests/src/com.google.protobuf/protobuf-javalite/3.25.3/build/reports/problems/problems-report.html
      BuilderType extends Builder<MessageType,BuilderType> declared in class GeneratedMessageLite

  1 error
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.


* Try:
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
> Check your code and dependencies to fix the compilation error(s)

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 2 executed, 11 up-to-date
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 11s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2711-8b107850/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.google.protobuf:protobuf-javalite:3.25.3 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 18s
9 actionable tasks: 1 executed, 8 up-to-date
